a bit more contrast and don't highlight active file in hc, fixes microsoft/pxt-microbit#2276

--- a/theme/highcontrast.less
+++ b/theme/highcontrast.less
@@ -9,7 +9,7 @@
         High Contrast
 *******************************/
 
-@selected: #8f7e1d;
+@selected: #6b5e16;
 @disabled: #3ff23f;
 @hcYellow: yellow;
 
@@ -288,7 +288,7 @@
             color: white !important;
             border: 1px solid white !important;
         }
-        .item:focus, .item.active {
+        .item:focus {
             background: @selected !important;
 
             span {
